fixing flickering

--- a/static/v2/planner_v2.css
+++ b/static/v2/planner_v2.css
@@ -187,12 +187,6 @@ body {
 }
 
 
-.event:hover {
-  z-index: 100;
-  height: auto !important;
-}
-
-
 
 #modal {
   position: fixed;
